# track_link

./: README.md  pubspec.yaml
clib/: CMakeLists.txt  vidcap_api.cpp
lib/: example.dart  main.dart
lib/models/: data_loading_primitives.dart  detect_list.dart  painting_box_view.dart  target_object.dart  track_list.dart  track_object.dart  video_capture.dart  video_reader_bindings.dart
lib/vidcap_src/: CMakeLists.txt  vidcap_api.cpp
lib/widgets/: master_widget.dart  video_loader_widget.dart
lib/widgets/detect_list/: detect_list_widget.dart
lib/widgets/detect_list/components/: detect_list_title_card.part.dart  detect_list_view.part.dart  detect_tile.part.dart
lib/widgets/image_display/: image_display_widget.dart
lib/widgets/image_display/components/: active_layer.part.dart  box_canvas.part.dart  drawing_listener.part.dart  image_display.part.dart  painters.part.dart
lib/widgets/track_list/: track_list_widget.dart
lib/widgets/track_list/components/: track_frame_tile.part.dart  track_list_title_card.part.dart  track_list_view.part.dart  track_tile.part.dart
lib/widgets/video_control/: video_control_widget.dart
lib/widgets/video_control/components/: data_controls.part.dart  det_future_slider.part.dart  det_history_slider.part.dart  history_future_view.part.dart  history_slider.part.dart  track_future_slider.part.dart  track_history_slider.part.dart  video_playback.part.dart  video_slider.part.dart
lib/widgets/video_loader/: video_loader_widget.dart
linux/: CMakeLists.txt
test/track_list/: track_list_test.dart
web/: index.html  manifest.json
(+3 files in other folders)
